--- a/style1.css
+++ b/style1.css
@@ -11,10 +11,10 @@ background-color: lightblue;
 .container {
     margin-left: 0%;
     padding: 0;
-    background-color: #DDDDDD
-;
+    background-color: #DDDDDD;
     width: 100%;
     height: 100%;
+    margin-top: 12vh;
 
 }
 
@@ -32,7 +32,7 @@ h1{
 
 .container2 {
     margin: 0;
-    padding: 0;
+    padding-top: 4vh;
     background-color: ;
     width: 100%;
     height: 300px;
@@ -94,7 +94,7 @@ border-top: 1px solid black;
    vertical-align: middle;
    display: block;
    text-align: center;
-   margin-top: 100px;
+   margin-top: 10vh;
 
    }
 .button:hover {
